--- a/README.Rmd
+++ b/README.Rmd
@@ -2,18 +2,21 @@
 output: github_document
 ---
 
-# arma64bit
 
 [![Build Status](https://travis-ci.org/gvegayon/arma64bit.svg?branch=master)](https://travis-ci.org/gvegayon/arma64bit)
 [![Build status](https://ci.appveyor.com/api/projects/status/peavy3c38yx38l09/branch/master?svg=true)](https://ci.appveyor.com/project/gvegayon/arma64bit/branch/master)
 
+# arma64bit
 
-```{r, echo = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  fig.path = "README-"
-)
-```
+This toy package has been created in order to test the stability of using `64int_t`
+with __RcppArmadillo__. By passing the flag `-DARMA_64BIT_WORD` and 
+`CXX_STD = CXX11` in `Makevars` it is possible to use big matrices (mora than
+4 billion elements) within __R__.
 
-Uses https://github.com/gvegayon/RcppArmadillo
+# Author
+
+George G. Vega Yon
+
+g *.* vegayon gmail
+
+
